{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "c5830137-4c38-411c-a732-0e4c346dd6cc",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "b60fa04f-c0fc-4caa-abe6-083ebe5f951c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "28893fe6-5c9c-4081-bc25-5ddfeb5e0b94",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleClick",
                    "type": "Button",
                    "id": "1baf0e56-6b16-494a-bf69-ee101831b7b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap(tapTime=0.2,tapDelay=0.2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c4d2aec-4e6d-4953-945c-779f57b23e4c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53be3674-4424-435e-849a-5cdeca083a1f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b013a54-1a81-487f-b56d-76416fe5d899",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a219198f-2eac-4e37-a30c-a8f0ec70cc9a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f0f43d8-e0f2-4b1f-a27f-9bbffe57b187",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f3830f2-4077-46ce-95f5-f8b1842fbd77",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "MultiTap(tapDelay=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "DoubleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}